# mdnscpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh
cmake/: FindOrFetchLibuv.cmake  Findlibuv.cmake
design/: platforms.md
example/: CMakeLists.txt  main.cpp
include/mdnscpp/: BrowseResult.h  Browser.h  CallQueue.h  DefaultLoop.h  EventLoop.h  EventWatch.h  IPAddress.h  LibuvLoop.h  Platform.h  PollLoop.h  TxtRecord.h  Types.h  utils.h
mdns-browse/: .npmignore  LICENSE  README.md  binding.gyp  import-mdnscpp.js  index.d.ts  index.js  package-lock.json  package.json
mdns-browse/src/: mdns-browse.cpp
mdns-browse/test/: local.js  local.test.js
src/: BrowseResult.cpp  Browser.cpp  CallQueue.cpp  EventLoop.cpp  IPAddress.cpp  LibuvLoop.cpp  Platform.cpp  PollLoop.cpp  TxtRecord.cpp  debug.h  sockAddrToIPProtocol.cpp  sockAddrToIPProtocol.h  sockAddrToString.cpp  sockAddrToString.h  throw.h  timeval.h  utils.cpp
